# wzj-signin

./: .gitignore  LICENSE  README.md  README.zh-CN.md  config.toml.example  pyproject.toml
tests/: test_http_client.py
wzj_signin/: __main__.py  email.py  http_client.py  logger.py  main.py  qrsign.py  utils.py
